--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             * {
                 font-family: monospace;
             }
+            body {
+              background: #bfbfbf;
+            }
         </style>
     </head>
     <body>
@@ -44,5 +47,4 @@
             });
         </script>
     </body>
-    a
 </html>
