--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               e.preventDefault();
               const username = document.getElementById('username').value.trim();
               const password = document.getElementById('password').value.trim();
-              const trackingcode = document.getElementById('trackingcode').value.trim();
+              const service = document.getElementById('trackingcode').value.trim();
               if (!username || !password) {
                 alert('Please enter password AND username.');
                 return;
