--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
               animation: warning .2s infinite linear;
             }
             @keyframes warning {
-              from {color: yellow;}
-              to {color: orange;}
+              0% {color: yellow;}
+              50% {color: orange;}
+              75% {color: red;}
+              100% {color: yellow;}
             }
         </style>
     </head>
