--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               background: #bfbfbf;
             }
             .warning {
-              animation: warning .2s infinite linear;
+              animation: warning 1s infinite linear;
             }
             @keyframes warning {
               0% {color: yellow;}
@@ -48,6 +48,8 @@
               <option value="nike">Nike</option>
               <option value="adidas">Adidas</option>
               <option value="samsung">Samsung</option>
+              <option value="github">Github</option>
+              <option value="scratch">Scratch MIT</option>
             </select>
 
             <button type="submit">Send</button>
